app/assets/stylesheets/blog.scss
/* ... */
blockquote {
  aside.onebox {
  }
}

// -- Onebox Github Code Blob --
pre.onebox code ol.lines li:before {
  position: absolute;
  display:inline-block;
  width:35px;
  left: -40px;
  background: #F7F7F7;
  color:#AFAFAF;
  text-align:right;
  padding-right:5px;
  font-size:12px;
  line-height: 1.9em;
  content: counter(li-counter);
  counter-increment: li-counter;
}


pre.onebox code ol{
	margin-left:0px;
	line-height:1.5em;
}
pre.onebox code li{
	background-color:#fff;
	padding-left:5px;
}

pre.onebox code ol.lines{
	position:relative;
	margin-left: 40px;
}

pre.onebox code ol.lines li {
	list-style-type: none;
	padding-left: 5px;
	margin-left: 0px;
	border-left: 1px solid #CFCFCF;
	min-height: 1.5em; //show empty li lines
  white-space: pre;
}

pre.onebox code li.selected{
	background-color:#F8EEC7
}

pre.onebox code {
 white-space: normal;
}

//Onebox - Github - Pull request
.onebox-body .github-commit-status {
  background: #F5F5F5;
  border-radius: 5px;
  margin:5px 0px 5px 100px;
  padding: 10px;
}

.github-commit-stats {
   margin-top: 5px;
}

.onebox-body .status_tag {
  display:inline-block;
  color:#fff;
  padding:1px 4px;
  border-radius:3px;
  font-weight:bold;
  margin-bottom:5px;
  text-transform:capitalize;
}

.onebox-body .build_status
{
  padding: 2px;
  font-size:12px;
}

.onebox-body .status_tag.open {
  background-color:#6cc644;
}
.onebox-body .status_tag.merged{
  background-color:#6e5494;
}
.onebox-body .status_tag.closed {
  background-color:#bd2c00;
}

.onebox-body .github-content-right{
  margin-left:100px;
}

small {
  font-size: 10px;
}

// responsive stuff
@media (max-width: 1000px) , (max-device-width: 500px) {
  #header {
    max-width: 100%;
  }
  #wrapper {
    margin: auto;
  }
  #headerLogo {
    border-top-right-radius: 0;
    border-top-left-radius: 0;
  }
  #content-wrapper {
    margin: 0 10px;
    width: calc(100% - 20px);
  }
  #footer {
    margin-left: 10px;
  }

}

code {
  word-wrap: break-word;
}

@media (max-device-width: 820px) , (max-device-width: 500px) {
  #sidebar {
    display: none;
  }
  #headerLogo ul {
    display: none;
  }
}

@media (max-device-width: 500px) {

  #headerLogo {
    height: 140px;
  }

  #content ol {
    margin-left: 50px;
  }

  html {
    font-size: 2rem;
  }

}


// highlight

.hljs{display:block;overflow-x:auto;padding:0.5em;background:#f0f0f0;-webkit-text-size-adjust:none}.hljs,.hljs-subst,.hljs-tag .hljs-title,.nginx .hljs-title{color:black}.hljs-string,.hljs-title,.hljs-constant,.hljs-parent,.hljs-tag .hljs-value,.hljs-rules .hljs-value,.hljs-preprocessor,.hljs-pragma,.haml .hljs-symbol,.ruby .hljs-symbol,.ruby .hljs-symbol .hljs-string,.hljs-template_tag,.django .hljs-variable,.smalltalk .hljs-class,.hljs-addition,.hljs-flow,.hljs-stream,.bash .hljs-variable,.apache .hljs-tag,.apache .hljs-cbracket,.tex .hljs-command,.tex .hljs-special,.erlang_repl .hljs-function_or_atom,.asciidoc .hljs-header,.markdown .hljs-header,.coffeescript .hljs-attribute{color:#800}.smartquote,.hljs-comment,.hljs-annotation,.diff .hljs-header,.hljs-chunk,.asciidoc .hljs-blockquote,.markdown .hljs-blockquote{color:#888}.hljs-number,.hljs-date,.hljs-regexp,.hljs-literal,.hljs-hexcolor,.smalltalk .hljs-symbol,.smalltalk .hljs-char,.go .hljs-constant,.hljs-change,.lasso .hljs-variable,.makefile .hljs-variable,.asciidoc .hljs-bullet,.markdown .hljs-bullet,.asciidoc .hljs-link_url,.markdown .hljs-link_url{color:#080}.hljs-label,.hljs-javadoc,.ruby .hljs-string,.hljs-decorator,.hljs-filter .hljs-argument,.hljs-localvars,.hljs-array,.hljs-attr_selector,.hljs-important,.hljs-pseudo,.hljs-pi,.haml .hljs-bullet,.hljs-doctype,.hljs-deletion,.hljs-envvar,.hljs-shebang,.apache .hljs-sqbracket,.nginx .hljs-built_in,.tex .hljs-formula,.erlang_repl .hljs-reserved,.hljs-prompt,.asciidoc .hljs-link_label,.markdown .hljs-link_label,.vhdl .hljs-attribute,.clojure .hljs-attribute,.asciidoc .hljs-attribute,.lasso .hljs-attribute,.coffeescript .hljs-property,.hljs-phony{color:#88f}.hljs-keyword,.hljs-id,.hljs-title,.hljs-built_in,.css .hljs-tag,.hljs-javadoctag,.hljs-phpdoc,.hljs-dartdoc,.hljs-yardoctag,.smalltalk .hljs-class,.hljs-winutils,.bash .hljs-variable,.apache .hljs-tag,.hljs-type,.hljs-typename,.tex .hljs-command,.asciidoc .hljs-strong,.markdown .hljs-strong,.hljs-request,.hljs-status{font-weight:bold}.asciidoc .hljs-emphasis,.markdown .hljs-emphasis{font-style:italic}.nginx .hljs-built_in{font-weight:normal}.coffeescript .javascript,.javascript .xml,.lasso .markup,.tex .hljs-formula,.xml .javascript,.xml .vbscript,.xml .css,.xml .hljs-cdata{opacity:0.5}

